# market-data-pipelines

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md
uv-version/: .gitignore  README.md  monitor.sh  pyproject.toml  requirements.txt  run_pipeline.sh  setup.sh
uv-version/scripts/: data_downloader.py  data_processor.py  report_generator.py
venv-version/: .gitignore  LICENSE  README.md  monitor.sh  run_pipeline.sh  setup.sh
venv-version/config/: symbols.yaml
